# Cyrillic-OCR

./: .gitignore  DataSources.md  README.md  main.py  pyproject.toml
gui/: app.py
gui/static/: script.js
gui/templates/: index.html  result.html
src/backbones/: cnn.py  deformable_cnn.py
src/config/: backbone_type.py  model_config.py  resnet_type.py  train_config.py
src/models/: ocr_model.py  ocr_model_wrapper.py
src/scripts/: calculate_dataset_stats.py  infer.py  mps.py  preprocess_images.py  train_test.py
src/utils/: collate.py  error_rates.py  label_text_mapping.py  natural_dataset.py  resize_and_pad.py  synth_dataset.py  test_utils.py  train_utils.py
